# DBMind

./: .gitignore  CLAUDE.md  LICENSE  README.md  dbmind-design.html  index.html  package-lock.json  package.json  rebuild.md  tsconfig.electron.json  vite.config.ts  迭代计划.md
.github/workflows/: release.yml
docs/: RELEASE.md  design.md  专利技术交底书.md
docs/releases/: v0.2.3.md  v0.2.4.md
electron/: main.ts  preload.cts  preload.ts
electron/services/: dataEditor.ts  dbCommon.ts  queryRunner.ts  storageStore.ts  tableDesigner.ts
scripts/: build-release.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/dbmind-ai/: Cargo.toml
src-tauri/crates/dbmind-ai/src/: engine.rs  lib.rs  modules.rs  providers.rs
src-tauri/crates/dbmind-cache/: Cargo.toml
src-tauri/crates/dbmind-cache/src/: backend.rs  lib.rs  store.rs
src-tauri/crates/dbmind-core/: Cargo.toml
src-tauri/crates/dbmind-core/src/: errors.rs  traits.rs  types.rs
src-tauri/crates/dbmind-db/: Cargo.toml
src-tauri/crates/dbmind-db/src/: connection.rs  lib.rs  manager.rs  mysql.rs  postgres.rs
src-tauri/crates/dbmind-query/: Cargo.toml
src-tauri/crates/dbmind-query/src/: executor.rs  lib.rs  result_store.rs  service.rs
src-tauri/crates/dbmind-schema/: Cargo.toml
src-tauri/crates/dbmind-schema/src/: index.rs  lib.rs  reader.rs  refresh.rs
src-tauri/crates/dbmind-sql/: Cargo.toml
src-tauri/crates/dbmind-sql/src/: extract.rs  format.rs  lib.rs  quote.rs  split.rs  validate.rs
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  connections.rs  mod.rs  query.rs  schema.rs  sql.rs
src-tauri/tests/: mysql_smoke.rs
src/app/: App.tsx
src/features/ai-chat/: AiConversationHeader.tsx  AiInputBar.tsx  AiMessageBubble.tsx  AiPanel.tsx  AiTableMention.tsx  SqlBlock.tsx
src/features/connections/: ConnectionForm.tsx  ConnectionTree.tsx
src/features/editor/: MonacoEditor.tsx  SqlEditor.tsx  TopBar.tsx  WorkTabStrip.tsx
src/features/navigation/: LeftRail.tsx  Sidebar.tsx
src/features/result-grid/: DataGrid.tsx  ResultGrid.tsx
src/features/schema-tree/: SchemaTree.tsx  TableStructureModal.tsx
src/features/settings/: SettingsModal.tsx
src/layouts/: AppLayout.tsx
src/renderer/: App.tsx  browserApi.ts  i18n.ts  main.tsx  styles.css  vite-env.d.ts
src/renderer/components/ai/: AiPanel.tsx  ConversationSwitcher.tsx
src/renderer/components/connection/: ConnectionForm.tsx  ConnectionModal.tsx
src/renderer/components/editor/: SqlEditor.tsx
src/renderer/components/modals/: SqlConfirmModal.tsx
src/renderer/components/navigation/: LeftRail.tsx
src/renderer/hooks/: useAiAssistant.ts  useBatchEdit.ts  useConnections.ts  useSchema.ts  useSettings.ts  useWorkTabs.ts
src/renderer/locales/: de.json  en.json  fr.json  ja.json  ko.json  ru.json  zh-CN.json  zh-TW.json
src/renderer/styles/: ai-panel.css  batch-edit.css  composer.css  conversation-switcher.css  datatable.css  history.css  layout.css  modals.css  rail.css  reset.css  schema-card.css  settings.css  sidebar.css  sql-editor.css  theme-light.css  tokens.css  workspace.css
src/shared/: sqlTools.ts  types.ts
src/shared/api/: tauri.ts  types.ts
src/shared/components/: ResizeHandle.tsx
src/shared/hooks/: useQueryExecution.ts  useTauriEvents.ts
src/shared/sql/: identifiers.ts  statements.ts
src/shared/stores/: chatStore.ts  connectionStore.ts  editorStore.ts  queryStore.ts  settingsStore.ts  uiStore.ts
src/shared/utils/: fuzzy.ts
src/styles/: ai-panel.css  editor.css  index.ts  layout.css  modals.css  rail.css  reset.css  sidebar.css  tokens.css  workspace.css
(+10 files in other folders)
