[workspace]
resolver = "2"
members = [
    "crates/dbmind-core",
    "crates/dbmind-db",
    "crates/dbmind-query",
    "crates/dbmind-schema",
    "crates/dbmind-ai",
    "crates/dbmind-sql",
    "crates/dbmind-cache",
]

[package]
name = "dbmind"
version = "0.2.5"
description = "AI Native SQL Workspace"
authors = ["DBMind Team"]
license = "MIT"
repository = "https://github.com/walle/dbmind"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dbmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
dbmind-core = { path = "crates/dbmind-core" }
dbmind-db = { path = "crates/dbmind-db" }
dbmind-query = { path = "crates/dbmind-query" }
dbmind-schema = { path = "crates/dbmind-schema" }
dbmind-ai = { path = "crates/dbmind-ai" }
dbmind-sql = { path = "crates/dbmind-sql" }
dbmind-cache = { path = "crates/dbmind-cache" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dirs = "5"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
