[package]
name = "dbmind-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
dbmind-core = { path = "../dbmind-core" }
dbmind-schema = { path = "../dbmind-schema" }
dbmind-sql = { path = "../dbmind-sql" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
