[package]
name = "dbmind-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
dbmind-core = { path = "../dbmind-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
