[package]
name = "dbmind-db"
version = "0.1.0"
edition = "2021"

[dependencies]
dbmind-core = { path = "../dbmind-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
mysql_async = { version = "0.34", features = ["native-tls"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
async-trait = "0.1"
postgres-openssl = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
