[package]
name = "dbmind-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
dbmind-core = { path = "../dbmind-core" }
dbmind-db = { path = "../dbmind-db" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
